--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "weather-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://a0713180.xsph.ru/weather-react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.2",
+    "react-transition-group": "^4.4.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
